Signals from Long to Double Series Segment can use duration of months or years